<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ContainerStyle">
    <include layout="@layout/header"
        />
    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:indeterminate="false"
        android:max="100"
        android:progressDrawable="@drawable/style_horizontal"
        android:secondaryProgress="30"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/progressBar" />
    <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
        style = "@style/HeaderReasonTextViewStyle"

        android:text="@string/header_reason_txt"

        > </com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv>
    <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
        style = "@style/ContentReasonTextViewStyle"
        android:id="@+id/mark1"
        android:text="@string/subheader_reason_txt" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
      >

        <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomEt
            style="@style/gettingstarted_edittext"
            android:drawableRight="@drawable/search"
            android:hint="@string/searchsymptom_txt"
            android:id="@+id/editText2" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            style="@style/LinearLayoutStyle">
            <LinearLayout
                android:orientation="vertical"
                style="@style/LinearLayoutStyle">
                <View
                    style="@style/ReasonViewStyle"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/LinearLayoutStyle">
                   <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                        style = "@style/ReasonTextViewStyle"
                        android:text="@string/acne_txt"
                        android:id="@+id/acne_txt" />

                    <ImageView
                     style="@style/SpinnerButtonStyle"
                        />

                </LinearLayout>
                <View
                    style="@style/ReasonViewStyle"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/LinearLayoutStyle">
                  <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                      style = "@style/ReasonTextViewStyle"
                        android:text="@string/alcohol_txt"
                        android:id="@+id/alcohol_txt" />
                    <ImageView
                        style="@style/SpinnerButtonStyle"
                        />

                </LinearLayout>
                <View
                    style="@style/ReasonViewStyle"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/LinearLayoutStyle">
                  <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                      style = "@style/ReasonTextViewStyle"

                        android:text="@string/allergy_txt"

                        android:id="@+id/allergy_txt"/>

                    <ImageView
                        style="@style/SpinnerButtonStyle"
                        />

                </LinearLayout>
                <View
                    style="@style/ReasonViewStyle"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/LinearLayoutStyle">
                  <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                      style = "@style/ReasonTextViewStyle"
                        android:text="@string/rihinits_txt"
                        android:id="@+id/Rhinitis_txt" />

                    <ImageView
                        style="@style/SpinnerButtonStyle"
                        />
                </LinearLayout>
                <View
                    style="@style/ReasonViewStyle"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/LinearLayoutStyle">
                  <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                      style = "@style/ReasonTextViewStyle"

                        android:text="@string/anal_txt"

                        android:id="@+id/anal_txt" />

                    <ImageView
                        style="@style/SpinnerButtonStyle"
                        />

                </LinearLayout>
                <View
                    style="@style/ReasonViewStyle"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                 <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                     style = "@style/ReasonTextViewStyle"

                        android:text="@string/anxiety_txt"

                        android:id="@+id/anxiety_txt" />

                    <ImageView
                        style="@style/SpinnerButtonStyle"
                        />

                </LinearLayout>
                <View
                    style="@style/ReasonViewStyle"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/LinearLayoutStyle">
                    <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                        style = "@style/ReasonTextViewStyle"
                        android:text="@string/arthritis_txt"
                        android:id="@+id/arthritis_txt" />

                    <ImageView
                        style="@style/SpinnerButtonStyle"
                        />
                </LinearLayout>
                <View
                    style="@style/ReasonViewStyle"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                style="@style/LinearLayoutStyle">
             <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                 style = "@style/ReasonTextViewStyle"
                    android:text="@string/asthma_txt"
                    android:id="@+id/asthma_txt" />

                <ImageView
                    style="@style/SpinnerButtonStyle"
                    />

            </LinearLayout>
            <View
                style="@style/ReasonViewStyle"
                />


            <LinearLayout
                android:orientation="horizontal"
                style="@style/LinearLayoutStyle">
              <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                  style = "@style/ReasonTextViewStyle"
                    android:text="@string/atheletesfoot_txt"
                    android:id="@+id/athelete_txt" />

                <ImageView
                    style="@style/SpinnerButtonStyle"
                    />

            </LinearLayout>
            <View
                style="@style/ReasonViewStyle"
                />
            <LinearLayout
                android:orientation="horizontal"
                style="@style/LinearLayoutStyle">
              <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                  style = "@style/ReasonTextViewStyle"
                    android:text="@string/bloodsputum_txt"
                    android:id="@+id/sputum_txt" />

                <ImageView
                    style="@style/SpinnerButtonStyle"
                    />
            </LinearLayout>
            <View
                style="@style/ReasonViewStyle"
                />

            <LinearLayout
                android:orientation="horizontal"
                style="@style/LinearLayoutStyle">
             <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                 style = "@style/ReasonTextViewStyle"
                    android:text="@string/bloodstool_txt"
                    android:id="@+id/stool_txt" />

                <ImageView
                    style="@style/SpinnerButtonStyle"
                    />

            </LinearLayout>
            <View
                style="@style/ReasonViewStyle"
                />
            <LinearLayout
                android:orientation="horizontal"
                style="@style/LinearLayoutStyle">
               <com.mdlive.unifiedmiddleware.commonclasses.customUi.CustomTv
                   style = "@style/ReasonTextViewStyle"
                    android:text="@string/bloodurine_txt"
                    android:id="@+id/urine_txt" />

                <ImageView
                    style="@style/SpinnerButtonStyle"
                    />

            </LinearLayout>
            <View
               style="@style/ReasonViewStyle"

                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>